fixed comma and added z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -363,6 +363,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 99;
 }
 
 /* Room 'Walk up organizer' if reserved */
@@ -404,7 +405,7 @@
 }
 
 .room__container__status__title__label1,
-.room__container__status__title__label2, {
+.room__container__status__title__label2 {
   font-size: 0px;
 }
 
